<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.PrimeNumFragment">

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true" />

        <TextView
            android:id="@+id/tv_no_prime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/no_prime"
            android:textSize="@dimen/font_l"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:visibility="gone" />

        <ScrollView
            android:id="@+id/sv_scroller"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_nav">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_m"
                android:layout_marginTop="@dimen/padding_l"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_prime_number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/prime_numbers"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:textSize="@dimen/font_l" />

                <TextView
                    android:id="@+id/tv_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_xl"
                    android:lineSpacingExtra="@dimen/padding_l"
                    android:textColor="@color/black"
                    android:visibility="gone"
                    android:textSize="@dimen/font_l"
                    android:layout_marginBottom="@dimen/padding_xxl" />

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.divider.MaterialDivider
            android:layout_width="match_parent"
            android:layout_height="@dimen/border"
            android:layout_below="@id/sv_scroller"
            android:layout_alignTop="@+id/btn_back"
            android:layout_marginTop="@dimen/n_padding_m" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginVertical="@dimen/padding_m"
            android:background="@drawable/bg_button"
            android:text="@string/btn_back"
            android:textAllCaps="false"
            android:textSize="@dimen/font_m"
            app:backgroundTint="@null" />

    </RelativeLayout>
</layout>